--- a/src/app/map/map.component.html
+++ b/src/app/map/map.component.html
@@ -1,10 +1,5 @@
-<div class="row">
-	<div class="col-lg-2 col-xl-2 col-12">
-
-	</div>
-	<div class="col-lg-10 col-xl-10 col-12">
-		<div class="card">
-			<div id="mapbox"></div>
-		</div>
+<div class="map-container">
+	<div class="map-frame">
+		<div id="map"></div>
 	</div>
 </div>
