--- a/src/app/map/map.component.scss
+++ b/src/app/map/map.component.scss
@@ -1,3 +1,17 @@
-.card {
-	height: 100% !important;
+.map-container {
+	position: absolute;
+	top: 0;
+	left: 0;
+	right: 0;
+	bottom: 0;
+	margin: 30px;
+}
+
+.map-frame {
+	border: 2px solid black;
+	height: 100%;
+}
+
+#map {
+	height: 100%;
 }
