--- a/src/assets/scss/styles.scss
+++ b/src/assets/scss/styles.scss
@@ -2,3 +2,5 @@
 
 @import "~bootstrap/dist/css/bootstrap.css";
 @import "~bootstrap-icons/font/bootstrap-icons.css";
+
+@import 'leaflet/dist/leaflet.css';
